--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     <!-- Include Socket.io client library from CDN -->
     <script src="https://cdn.socket.io/4.0.1/socket.io.min.js"></script>
     <script>
-        const socket = io('http://localhost:3000');
+        const socket = io('https://lets-meet-aygb.onrender.com');
         const roomIdInput = document.getElementById('roomId');
         const generateLinkButton = document.getElementById('generateLink');
         const localVideo = document.getElementById('localVideo');
